// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDirective Color cases when color is accent then check snapshot 1`] = `
<button
  class="gro-button gro-medium gro-accent"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Color cases when color is primary then check snapshot 1`] = `
<button
  class="gro-button gro-medium gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Color cases when color is warn then check snapshot 1`] = `
<button
  class="gro-button gro-medium gro-warn"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create default button 1`] = `
<button
  class="gro-button gro-medium gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Outlined cases should create 1`] = `
<button
  class="gro-button gro-medium gro-outlined gro-primary"
  grobutton=""
  outlined=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Size cases when size is large then check snapshot 1`] = `
<button
  class="gro-button gro-large gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Size cases when size is medium then check snapshot 1`] = `
<button
  class="gro-button gro-medium gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Size cases when size is small then check snapshot 1`] = `
<button
  class="gro-button gro-small gro-primary"
  grobutton=""
>
  Click Me
</button>
`;
